--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             Video Mode
             <select id="bulkVideoMode">
               <option value="meme-to-video">Convert Memes to Videos</option>
-              <option value="text-to-video">AI Text-to-Video (Coming Soon)</option>
+              <option value="text-to-video">AI Text-to-Video</option>
             </select>
           </label>
 
