feat: Fix library card buttons visibility and dark mode
- Enhanced button visibility with bold text and min-width
- Improved button layout: side-by-side with proper spacing
- Fixed dark mode on library cards by removing inline style overrides
- Increased info section bottom padding for better button spacing
- All three buttons now prominent: Reuse (blue), Schedule (green), Delete (red)
- Schedule button includes comprehensive 8-step validation
- Cards properly respond to dark mode toggle

--- a/index.html
+++ b/index.html
@@ -332,6 +332,10 @@ Top Text 2|Bottom Text 2"></textarea>
           <legend>Preview</legend>
           <img id="memePreview" width="300" alt="Live Meme Preview"
             style="display: block; margin: 0 auto; border: 1px solid #e2e8f0" />
+          <button type="button" id="saveMemeToLibrary" class="toolbar-btn"
+            style="margin-top: 10px; width: 100%; padding: 8px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: none; border-radius: 6px; cursor: pointer; font-weight: 600;">
+            💾 Save to Library
+          </button>
         </fieldset>
       </fieldset>
 
