--- a/index.html
+++ b/index.html
@@ -815,8 +815,40 @@ Top Text 2|Bottom Text 2"></textarea>
 
       <h2 id="providerConfigTitle">Configure Provider</h2>
 
-      <p style="color: #718096; font-size: 0.95rem">Enter the OAuth client credentials for the provider below. These
-        values are stored locally and encrypted.</p>
+      <p style="color: #718096; font-size: 0.95rem; margin-bottom: 12px">
+        To use this provider, you need OAuth credentials from their developer portal. 
+        <strong>All credentials are stored locally and encrypted.</strong>
+      </p>
+
+      <!-- Help Section with Links -->
+      <div id="providerHelpSection" style="
+            background: #edf2f7; 
+            border-left: 4px solid #4299e1; 
+            padding: 12px; 
+            margin-bottom: 16px;
+            border-radius: 6px;
+            font-size: 0.9rem;
+          ">
+        <div style="font-weight: 600; margin-bottom: 8px; color: #2d3748">📋 Setup Instructions:</div>
+        <ol style="margin: 8px 0 8px 20px; line-height: 1.6; color: #4a5568">
+          <li>Visit the developer portal (link below)</li>
+          <li>Create an app and get your Client ID & Secret</li>
+          <li>Set redirect URI to: <code style="background: #cbd5e0; padding: 2px 6px; border-radius: 3px">http://localhost:3000/oauth/callback</code></li>
+          <li>Enter credentials below and click "Save & Connect"</li>
+        </ol>
+        <div style="margin-top: 10px">
+          <a id="providerPortalLink" href="#" target="_blank" style="
+                color: #3182ce; 
+                text-decoration: none; 
+                font-weight: 600;
+                display: inline-flex;
+                align-items: center;
+                gap: 4px;
+              ">
+            🔗 Open Developer Portal →
+          </a>
+        </div>
+      </div>
 
       <fieldset style="margin-top: 12px; border: 1px solid #e2e8f0; padding: 12px; border-radius: 8px">
         <label style="display:block; margin-bottom:8px">
