style: format whitespace in index.html

--- a/index.html
+++ b/index.html
@@ -621,7 +621,8 @@ Top Text 2|Bottom Text 2"></textarea>
             <span class="connected-badge" style="display: none">✓ Connected</span>
           </button>
           <div style="width:100%; margin-top:8px; display:flex; gap:8px;">
-            <button type="button" id="resetAllBtn" class="small-action-btn danger">Reset Connections & Clear All</button>
+            <button type="button" id="resetAllBtn" class="small-action-btn danger">Reset Connections & Clear
+              All</button>
           </div>
         </div>
 
@@ -816,15 +817,15 @@ Top Text 2|Bottom Text 2"></textarea>
       <h2 id="providerConfigTitle">Configure Provider</h2>
 
       <p style="color: #718096; font-size: 0.95rem; margin-bottom: 12px">
-        To use this provider, you need OAuth credentials from their developer portal. 
+        To use this provider, you need OAuth credentials from their developer portal.
         <strong>All credentials are stored locally and encrypted.</strong>
       </p>
 
       <!-- Help Section with Links -->
       <div id="providerHelpSection" style="
-            background: #edf2f7; 
-            border-left: 4px solid #4299e1; 
-            padding: 12px; 
+            background: #edf2f7;
+            border-left: 4px solid #4299e1;
+            padding: 12px;
             margin-bottom: 16px;
             border-radius: 6px;
             font-size: 0.9rem;
@@ -833,13 +834,15 @@ Top Text 2|Bottom Text 2"></textarea>
         <ol style="margin: 8px 0 8px 20px; line-height: 1.6; color: #4a5568">
           <li>Visit the developer portal (link below)</li>
           <li>Create an app and get your Client ID & Secret</li>
-          <li>Set redirect URI to: <code style="background: #cbd5e0; padding: 2px 6px; border-radius: 3px">http://localhost:3000/oauth/callback</code></li>
+          <li>Set redirect URI to: <code
+              style="background: #cbd5e0; padding: 2px 6px; border-radius: 3px">http://localhost:3000/oauth/callback</code>
+          </li>
           <li>Enter credentials below and click "Save & Connect"</li>
         </ol>
         <div style="margin-top: 10px">
           <a id="providerPortalLink" href="#" target="_blank" style="
-                color: #3182ce; 
-                text-decoration: none; 
+                color: #3182ce;
+                text-decoration: none;
                 font-weight: 600;
                 display: inline-flex;
                 align-items: center;
