--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <link rel="stylesheet" href="styles.css" />
   <!-- Security utilities MUST load first -->
   <script src="utils/sanitize.js"></script>
+  <!-- Toast and keyboard shortcuts -->
+  <script src="utils/toast.js"></script>
+  <script src="utils/keyboard-shortcuts.js"></script>
+  <script src="utils/drag-drop.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gif.js@0.2.0/dist/gif.js"></script>
 </head>
@@ -31,6 +35,7 @@
     <!-- Top-bar Controls -->
     <div id="controls">
       <div id="errorContainer" class="error-container" style="color: red; margin: 10px 0; display: none"></div>
+      <button type="button" id="previewPostBtn" title="Preview before posting (Ctrl+P)">👁️ Preview</button>
       <button type="button" id="postNowBtn">Post Now</button>
       <button type="button" id="bulkGenerateBtn">Bulk Generate</button>
       <button type="button" id="createSlideshowBtn" style="display: none">
@@ -468,12 +473,22 @@ Top Text 2|Bottom Text 2"></textarea>
 
         <label id="sourceImageLabel" style="display: none">
           Source Image
-          <input type="file" id="sourceImage" accept="image/*" />
+          <div class="drop-zone" id="sourceImageDropZone">
+            <div class="drop-zone-icon">📁</div>
+            <div class="drop-zone-text">Drag & Drop Image Here</div>
+            <div class="drop-zone-hint">or click to browse</div>
+          </div>
+          <input type="file" id="sourceImage" accept="image/*" style="display:none" />
         </label>
 
         <label id="maskImageLabel" style="display: none">
           Mask Image (optional)
-          <input type="file" id="maskImage" accept="image/*" />
+          <div class="drop-zone" id="maskImageDropZone">
+            <div class="drop-zone-icon">📁</div>
+            <div class="drop-zone-text">Drag & Drop Mask Here</div>
+            <div class="drop-zone-hint">or click to browse</div>
+          </div>
+          <input type="file" id="maskImage" accept="image/*" style="display:none" />
         </label>
 
         <button type="button" id="actionBtn" style="
@@ -880,6 +895,58 @@ Top Text 2|Bottom Text 2"></textarea>
             style="padding:10px 14px; background:#e2e8e0; border:none; border-radius:6px;">Cancel</button>
         </div>
       </fieldset>
+    </div>
+  </div>
+
+  <!-- Content Preview Modal -->
+  <div id="previewModal" class="preview-modal">
+    <div class="preview-content">
+      <div class="preview-header">
+        <div class="preview-title">Preview Post</div>
+        <button class="preview-close" id="closePreviewModal">&times;</button>
+      </div>
+      <div class="preview-body">
+        <div class="preview-platform-tabs">
+          <button class="preview-platform-tab active" data-platform="instagram">Instagram</button>
+          <button class="preview-platform-tab" data-platform="tiktok">TikTok</button>
+          <button class="preview-platform-tab" data-platform="youtube">YouTube</button>
+          <button class="preview-platform-tab" data-platform="twitter">Twitter</button>
+        </div>
+        <div class="preview-platform-content active" data-platform="instagram">
+          <img id="previewImageInstagram" class="preview-image" src="" alt="Preview" />
+          <div id="previewCaptionInstagram" class="preview-caption"></div>
+        </div>
+        <div class="preview-platform-content" data-platform="tiktok">
+          <img id="previewImageTiktok" class="preview-image" src="" alt="Preview" />
+          <div id="previewCaptionTiktok" class="preview-caption"></div>
+        </div>
+        <div class="preview-platform-content" data-platform="youtube">
+          <img id="previewImageYoutube" class="preview-image" src="" alt="Preview" />
+          <div id="previewCaptionYoutube" class="preview-caption"></div>
+        </div>
+        <div class="preview-platform-content" data-platform="twitter">
+          <img id="previewImageTwitter" class="preview-image" src="" alt="Preview" />
+          <div id="previewCaptionTwitter" class="preview-caption"></div>
+        </div>
+      </div>
+      <div class="preview-footer">
+        <button id="previewConfirmPost" style="
+          padding: 10px 24px;
+          background: var(--blue-gradient);
+          color: white;
+          border: none;
+          border-radius: 6px;
+          cursor: pointer;
+          font-weight: 600;
+        ">Post Now</button>
+        <button id="cancelPreviewModal" style="
+          padding: 10px 24px;
+          background: #e5e7eb;
+          border: none;
+          border-radius: 6px;
+          cursor: pointer;
+        ">Cancel</button>
+      </div>
     </div>
   </div>
 
