--- a/index.html
+++ b/index.html
@@ -769,95 +769,8 @@ Top Text 2|Bottom Text 2"></textarea>
             </button>
           </fieldset>
 
-          <!-- AI Provider Authentication -->
-          <fieldset class="oauth-fieldset">
-            <legend>Connect AI Providers</legend>
-            <div class="feature-highlight" style="margin-bottom: 15px">
-              <strong>🤖 Connect your AI providers to unlock content generation</strong>
-              <p style="margin: 5px 0; font-size: 0.85rem; color: #718096">
-                Your API keys are encrypted and stored securely
-              </p>
-              <button type="button" id="reopenSetupWizard"
-                style="margin-top: 10px; padding: 8px 16px; background: #4a90e2; color: white; border: none; border-radius: 6px; cursor: pointer; font-size: 14px;">
-                📖 Show Setup Guide
-              </button>
-            </div>
-            <div class="oauth-buttons">
-              <button type="button" id="connectOpenAIBtn" class="ai-connect-btn" data-provider="openai">
-                <span class="connect-icon">🔗</span>
-                <span class="provider-name">Connect OpenAI</span>
-                <span class="connected-badge" style="display: none">✓ Connected</span>
-              </button>
-              <button type="button" id="connectRunwayBtn" class="ai-connect-btn" data-provider="runway">
-                <span class="connect-icon">🔗</span>
-                <span class="provider-name">Connect Runway ML</span>
-                <span class="connected-badge" style="display: none">✓ Connected</span>
-              </button>
-              <div style="width:100%; margin-top:8px; display:flex; gap:8px;">
-                <button type="button" id="resetAllBtn" class="small-action-btn danger">Reset Connections & Clear
-                  All</button>
-              </div>
-            </div>
-
-            <!-- Hidden fields to store active provider and encrypted keys -->
-            <input type="hidden" id="aiProvider" value="openai" />
-            <input type="hidden" id="openaiApiKey" />
-            <input type="hidden" id="runwayApiKey" />
-          </fieldset>
-
-          <!-- Platforms -->
-          <fieldset>
-            <legend>Platforms</legend>
-            <div class="platform-grid">
-              <div class="checkbox-item">
-                <input type="checkbox" id="instagram" />
-                <label for="instagram">Instagram</label>
-              </div>
-              <div class="checkbox-item">
-                <input type="checkbox" id="tiktok" />
-                <label for="tiktok">TikTok</label>
-              </div>
-              <div class="checkbox-item">
-                <input type="checkbox" id="youtube" />
-                <label for="youtube">YouTube</label>
-              </div>
-              <div class="checkbox-item">
-                <input type="checkbox" id="twitter" />
-                <label for="twitter">Twitter</label>
-              </div>
-            </div>
-          </fieldset>
-
-          <!-- Cost Tracker -->
-          <fieldset id="costTrackerFieldset">
-            <legend>💰 API Cost Tracker</legend>
-            <div class="cost-tracker">
-              <div class="cost-stat">
-                <span class="cost-label">Images Generated:</span>
-                <span class="cost-value" id="imagesGenerated">0</span>
-              </div>
-              <div class="cost-stat">
-                <span class="cost-label">Estimated OpenAI Cost:</span>
-                <span class="cost-value" id="openaiCost">$0.00</span>
-              </div>
-              <div class="cost-stat">
-                <span class="cost-label">Videos Generated:</span>
-                <span class="cost-value" id="videosGenerated">0</span>
-              </div>
-              <div class="cost-stat">
-                <span class="cost-label">Estimated Runway Cost:</span>
-                <span class="cost-value" id="runwayCost">$0.00</span>
-              </div>
-              <div class="cost-stat cost-total">
-                <span class="cost-label">Total Estimated:</span>
-                <span class="cost-value" id="totalCost">$0.00</span>
-              </div>
-              <button type="button" id="resetCostsBtn" class="reset-costs-btn">Reset Tracker</button>
-            </div>
-          </fieldset>
-
-          <fieldset class="oauth-fieldset">
-            <legend>Connect Your Social Media Accounts</legend>
+        </div>
+        <!-- END SECTION: GENERATE -->
             <div class="oauth-buttons">
               <div class="oauth-pair">
                 <button type="button" id="connectInstagramBtn">🔗 Connect Instagram <span class="status-badge"
@@ -984,6 +897,68 @@ Top Text 2|Bottom Text 2"></textarea>
             <ul id="scheduledPostsList"></ul>
           </div>
         </fieldset>
+
+        <!-- AI Provider Authentication -->
+        <fieldset class="oauth-fieldset">
+          <legend>Connect AI Providers</legend>
+          <div class="feature-highlight" style="margin-bottom: 15px">
+            <strong>🤖 Connect your AI providers to unlock content generation</strong>
+            <p style="margin: 5px 0; font-size: 0.85rem; color: #718096">
+              Your API keys are encrypted and stored securely
+            </p>
+            <button type="button" id="reopenSetupWizard"
+              style="margin-top: 10px; padding: 8px 16px; background: #4a90e2; color: white; border: none; border-radius: 6px; cursor: pointer; font-size: 14px;">
+              📖 Show Setup Guide
+            </button>
+          </div>
+          <div class="oauth-buttons">
+            <button type="button" id="connectOpenAIBtn" class="ai-connect-btn" data-provider="openai">
+              <span class="connect-icon">🔗</span>
+              <span class="provider-name">Connect OpenAI</span>
+              <span class="connected-badge" style="display: none">✓ Connected</span>
+            </button>
+            <button type="button" id="connectRunwayBtn" class="ai-connect-btn" data-provider="runway">
+              <span class="connect-icon">🔗</span>
+              <span class="provider-name">Connect Runway ML</span>
+              <span class="connected-badge" style="display: none">✓ Connected</span>
+            </button>
+            <div style="width:100%; margin-top:8px; display:flex; gap:8px;">
+              <button type="button" id="resetAllBtn" class="small-action-btn danger">Reset Connections & Clear
+                All</button>
+            </div>
+          </div>
+
+          <!-- Hidden fields to store active provider and encrypted keys -->
+          <input type="hidden" id="aiProvider" value="openai" />
+          <input type="hidden" id="openaiApiKey" />
+          <input type="hidden" id="runwayApiKey" />
+        </fieldset>
+
+        <!-- Platforms -->
+        <fieldset>
+          <legend>Target Platforms</legend>
+          <div class="platform-grid">
+            <div class="checkbox-item">
+              <input type="checkbox" id="instagram" />
+              <label for="instagram">Instagram</label>
+            </div>
+            <div class="checkbox-item">
+              <input type="checkbox" id="tiktok" />
+              <label for="tiktok">TikTok</label>
+            </div>
+            <div class="checkbox-item">
+              <input type="checkbox" id="youtube" />
+              <label for="youtube">YouTube</label>
+            </div>
+            <div class="checkbox-item">
+              <input type="checkbox" id="twitter" />
+              <label for="twitter">Twitter</label>
+            </div>
+          </div>
+        </fieldset>
+
+        <fieldset class="oauth-fieldset">
+          <legend>Connect Your Social Media Accounts</legend>
         </form>
 
       </div>
@@ -995,6 +970,34 @@ Top Text 2|Bottom Text 2"></textarea>
           <h1>💰 Stats & Activity</h1>
           <p>Track costs and view activity logs</p>
         </header>
+
+        <!-- Cost Tracker -->
+        <fieldset id="costTrackerFieldset">
+          <legend>💰 API Cost Tracker</legend>
+          <div class="cost-tracker">
+            <div class="cost-stat">
+              <span class="cost-label">Images Generated:</span>
+              <span class="cost-value" id="imagesGenerated">0</span>
+            </div>
+            <div class="cost-stat">
+              <span class="cost-label">Estimated OpenAI Cost:</span>
+              <span class="cost-value" id="openaiCost">$0.00</span>
+            </div>
+            <div class="cost-stat">
+              <span class="cost-label">Videos Generated:</span>
+              <span class="cost-value" id="videosGenerated">0</span>
+            </div>
+            <div class="cost-stat">
+              <span class="cost-label">Estimated Runway Cost:</span>
+              <span class="cost-value" id="runwayCost">$0.00</span>
+            </div>
+            <div class="cost-stat cost-total">
+              <span class="cost-label">Total Estimated:</span>
+              <span class="cost-value" id="totalCost">$0.00</span>
+            </div>
+            <button type="button" id="resetCostsBtn" class="reset-costs-btn">Reset Tracker</button>
+          </div>
+        </fieldset>
 
         <!-- Activity Log -->
         <fieldset>
